--- a/templates/predict.html
+++ b/templates/predict.html
@@ -26,7 +26,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Recommendation Results</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Contents-Topic based Recommendation Results</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -41,12 +41,11 @@
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 <a class="btn btn-primary" href="/results" role="button">View DB</a>
             </div>
-
         </div>
     </div>
 </div>
 
-<h1 style="text-align: center; margin-top: 2rem; margin-bottom: 1rem;">Recommendation Input 🍊</h1>
+<h1 style="text-align: center; margin-top: 2rem; margin-bottom: 1rem;">Contents based Recommendation Input 🍊</h1>
 <hr>
 
 <div class = "container">
