--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,10 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link" href="/img-predict">이미지 추천 입력</a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="/results">추천 결과</a>
                 </li>
             </ul>
