--- a/templates/results.html
+++ b/templates/results.html
@@ -46,13 +46,16 @@
         </div>
 
     {% endfor %}
-        </div>
+
+
+        <img src="{% static '무신사.png' %}"
+        style="width : 50%; height: 30%; margin-top: 1rem; margin-left: 1rem;">
+
+
     </div>
     </div>
 
-
-    <script src = "{% static 'js/magicgrid.js' %}"></script>
-
+<script src = "{% static 'js/magicgrid.js' %}"></script>
 
 
 
