--- a/templates/base.html
+++ b/templates/base.html
@@ -63,6 +63,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/results">추천 결과</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/wordcloud">워드 클라우드</a>
+                </li>
             </ul>
         </div>
     </nav>
