--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -28,28 +28,15 @@
 
     </style>
     <h1 style="text-align: center; margin-top: 2rem; ">
-            Recommendation </h1>
+            Wordcloud☁️ </h1>
     <hr>
 
     <div class="container">
     <div class="container pt-5">
         <div class="row justify-content-md-center">
-        {% for data in dataset %}
 
-        <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="{{ data.img }}" alt="">
-          <div class="card-body">
-            <h5 class="card-title">{{ data.name }}</h5>
-            <p class="card-text">{{ data.review }}</p>
-            <p class="card-text" style="font-weight: bolder">{{ data.price }}</p>
-          </div>
-        </div>
-
-    {% endfor %}
-
-
-{#        <img src="{% static '무신사.png' %}"#}
-{#        style="width : 50%; height: 30%; margin-top: 1rem; margin-left: 1rem;">#}
+        <img src="{% static '무신사.png' %}"
+        style="width : 70%; height: 50%; margin-top: 1rem;">
 
 
     </div>
