--- a/templates/image_predict.html
+++ b/templates/image_predict.html
@@ -74,13 +74,13 @@
                 <div class="form-group">
                     <label for="input_text">키워드 입력</label>
                     <input type="text" class="form-control" id="input_text"
-                           placeholder="키워드를 입력해주세요" required>
+                           placeholder="키워드를 입력해주세요 (명사 위주)" required>
                 </div>
 
                 <div class="form-group">
                     <label for="top_n">Top-N</label>
                     <input type="number" step="0.1" class="form-control" id="top_n"
-                           placeholder="양의 정수를 입력해주세요" required>
+                           placeholder="양의 정수를 입력해주세요 (권장 20개 이상)" required>
                 </div>
                 <button style ='margin-top: 2rem;' type="submit" value="Submit" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">제출</button>
             </form>
