--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -28,10 +28,10 @@
 
     </style>
     <h1 style="text-align: center; margin-top: 2rem; ">
-            Wordcloud☁️ </h1>
+            ☁️ Word Cloud ☁️ </h1>
     <hr>
 
-    <div class="container">
+    <div class="container" style="text-align: center">
     <div class="container pt-5">
         <div class="row justify-content-md-center">
 
