--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,6 @@
     }
     </style>
 
-
-
     <title>리뷰 기반 추천 시스템 </title>
 
     </head>
@@ -53,7 +51,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">추천 입력</a>
+                    <a class="nav-link" href="/">토픽 기반 추천 입력</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/topics">토픽 모델링</a>
                 </li>
 
                 <li class="nav-item">
